# Lastsaleprice

./: MANIFEST.in  README.md  pyproject.toml
last_sale_price/: api.py  hooks.py  install.py  modules.txt
last_sale_price/public/js/: sales_invoice.js  sales_invoice.js.save
