[project]
name = "last_sale_price"
authors = [
    { name = "Maas Consult Middle East Co", email = "github@maasconsult.co" }
]
description = "Show last sale price of selected item in Sales Invoice."
requires-python = ">=3.14"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "last_sale_price"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<17.0.0"
erpnext = ">=16.0.0,<17.0.0"
